chore(core): Setup code formatters, update .gitignore, add buildspec.yml, and prep project for CodeBuild CI/CD pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,15 @@
 npm-debug.log
 yarn-error.log
 
+# Beautify
+.jsbeautifyrc
+
+# Work in progress
+/wip
+
+# Angular and Babel Webpack
+/.angular
+
 # IDEs and editors
 .idea/
 .project
