--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,12 +5,16 @@ phases:
       nodejs: 16
     commands:
       - echo "Installing dependencies..."
-      - npm install
       - npm install -g @angular/cli@14.2.4
+      - npm install
+  test:
+    commands:
+      - echo "Running Jest tests..."
+      - npm test
   build:
     commands:
       - echo "Building Angular project..."
-      - ng build
+      - npm run build
   post_build:
     commands:
       - echo "Updating files in the S3 bucket..."
