--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "jest": {
     "preset": "jest-preset-angular",
-    "setupFilesAfterEnv": ["<rootDir>/setup-jest.ts"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setup-jest.ts"
+    ],
     "globalSetup": "jest-preset-angular/global-setup"
   },
   "private": true,
@@ -32,6 +34,10 @@
     "@angular/cli": "~14.0.1",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jest": "^29.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "eslint": "^8.25.0",
+    "eslint-plugin-jest": "^27.1.1",
     "jest": "^28.1.3",
     "jest-preset-angular": "^12.2.2",
     "typescript": "~4.7.2"
