--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brewski-bets",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
@@ -46,6 +46,6 @@
     "eslint-plugin-jest": "^27.1.1",
     "jest": "^28.1.3",
     "jest-preset-angular": "^12.2.2",
-    "typescript": "~4.7.2"
+    "typescript": "^4.8.0"
   }
 }
