--- a/package.json
+++ b/package.json
@@ -46,6 +46,6 @@
     "eslint-plugin-jest": "^27.1.1",
     "jest": "^29.0.0",
     "jest-preset-angular": "^13.0.0",
-    "typescript": "^5.2.0"
+    "typescript": "~5.2.0"
   }
 }
