--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "eslint": "^8.25.0",
     "eslint-plugin-jest": "^27.1.1",
     "jest": "^29.0.0",
-    "jest-preset-angular": "^13.0.0",
+    "jest-preset-angular": "18.0.0",
     "typescript": "~5.2.0"
   }
 }
