chore: Revamp README, add a LICENSE and switch to using pnpm

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
 # Compiled output
 /dist
-/tmp
-/out-tsc
-/bazel-out
 
-# Node
+# Generated code
 /node_modules
-npm-debug.log
-yarn-error.log
 
 # Beautify
 .jsbeautifyrc
@@ -17,35 +10,17 @@ yarn-error.log
 # Work in progress
 /wip
 
+# System files
+.DS_Store
+Thumbs.db
+
 # Angular and Babel Webpack
 /.angular
 
-# IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# Visual Studio Code
+# IDE - VSCode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
-
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
-.DS_Store
-Thumbs.db
