--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngneat/hot-toast": "^5.0.0",
     "@ngneat/overview": "^3.0.0",
     "loader-utils": "^3.2.1",
+    "pnpm": "^9.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
@@ -47,5 +48,6 @@
     "jest": "^29.0.0",
     "jest-preset-angular": "14.2.2",
     "typescript": "~5.5.4"
-  }
+  },
+  "packageManager": "pnpm@9.6.0+sha256.dae0f7e822c56b20979bb5965e3b73b8bdabb6b8b8ef121da6d857508599ca35"
 }
